--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('https://www.lupadigital.info/wp-content/uploads/2018/05/imagens-gratis.jpg.webp');
+    background-image: url('../img/imagem_rede_age.jpg');
     background-size: auto 100vh;
     font-family: Arial;
     height: 100vh;
