--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -9,9 +9,9 @@
 body {
     background-image: url('../img/imagem_rede_age.jpg');
     background-size: auto 100vh;
-    font-family: Arial;
+    font-family: 'Handlee', cursive;
     height: 100vh;
-    font-size: 10px;
+    font-size: 12px;
     } 
 
   /* se a tela tiver pelo menos 400px vai carregar estes estilos*/
@@ -21,7 +21,21 @@ body {
       }
 
     }
-     
+    
+    @media (min-width: 600px ) {
+      body{
+        font-size: 20px;
+      }
+
+    }
+
+    @media (min-width: 1200x ) {
+      body{
+        font-size: 26px;
+      }
+
+    }
+
    header {
     height: 100vh;
     display: flex; 
@@ -39,10 +53,12 @@ body {
    .menu ul {
      display: flex;
      justify-content: space-around;
+     background-color: turquoise;
    }
    
    .menu li {
      list-style: none; 
+     
    }
 
    .menu a {
@@ -52,7 +68,7 @@ body {
    }
    
    a {
-     color: teal;
+     color: rgb(13, 14, 5);
      text-decoration: none;
    }
    a:hover {
@@ -64,12 +80,64 @@ body {
      color: whitesmoke;
      text-align: center;
    }
+
+   .site-title {
+     font-size: 3em;
+     font-family: 'Sedgwick Ave', cursive;
+     
+   }
    
    .site-subtitle {
     font-style: italic;
+    font-family: 'East Sea Dokdo', cursive;
+    line-height: 1em;
+    font-size: 2.5em;
+    
+   }
+
+   .portfolio {
+     padding: 2em;
+     height: 100vh;
+   }
+
+   .portfolio h2 {
+    font-family: 'Sedgwick Ave', cursive;
+    color: whitesmoke;
+    margin-bottom: 1.5em;
+    font-size: 3em;
+   }
+
+   .portfolio .grid {
+     display: grid;
+     gap: 1.8em; 
+   }
+   @media( min-width: 560px) {
+      .portfolio .grid {
+        grid-template-columns: 240px 240px; 
+      }
+   }
+
+   @media( min-width: 880px) {
+    .portfolio .grid {
+      grid-template-columns: repeat(2, 400px); 
+      align-content: center;
+      justify-content: center;
+      height: calc(100vh - 48px );
+    }
+ }
+
+
+   .portfolio figure {
+     text-align: center;
+     color: whitesmoke;
    }
 
    .img-portfolio {
-     height: 180px;
-     width: 240px;
+     height: 270px;
+     width: 360px;
+     object-fit: fill;
+     border-radius: 5%; 
+    
    }
+
+   
