--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,184 +3,270 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 body {
-    background-image: url('../img/imagem_rede_age.jpg');
-    background-size: auto 100vh;
-    font-family: 'Handlee', cursive;
-    height: 100vh;
-    font-size: 12px;
-    } 
+  background-image: url('../img/imagem_rede_age.jpg');
+  background-size: auto 100vh;
+  font-family: 'Handlee', cursive;
+  height: 100vh;
+  font-size: 12px;
+} 
 
-  /* se a tela tiver pelo menos 400px vai carregar estes estilos*/
-    @media (min-width: 400px ) {
-      body{
-        font-size: 14px;
-      }
-
-    }
+/* se a tela tiver pelo menos 400px vai carregar estes estilos*/
+@media (min-width: 400px ) {
+  body{
+    font-size: 14px;
+  }
+}
     
-    @media (min-width: 600px ) {
-      body{
-        font-size: 20px;
-      }
+@media (min-width: 600px ) {
+  body{
+    background-attachment: fixed;
+    background-size: cover;
+    font-size: 18px;
+  }
+}
 
-    }
+@media (min-width: 1200x ) {
+  body{
 
-    @media (min-width: 1200x ) {
-      body{
-        font-size: 26px;
-      }
+    font-size: 20px;
+  }
+}
 
-    }
+header {
+height: 100vh;
+display: flex; 
+justify-content: center;
+align-items: center;
+}
 
-   header {
-    height: 100vh;
-    display: flex; 
+.menu {
+  background-color: white;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  z-index: 1;
+}
+   
+.menu ul {
+  display: flex;
+  justify-content: space-around;
+}
+   
+.menu li {
+  list-style: none; 
+  
+}
+
+.menu a {
+  display: block;
+  padding: 10px 20px;
+  transition: background-color 1.5s, color 1.5s;
+  /*background-color: aqua;(para saber como fica o botao atraves da cor*/
+}
+
+.menu a:active,
+.menu a:hover {
+  background-color: teal;
+  color: whitesmoke;
+}
+   
+a {
+  color: teal;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+.titulo {
+  transform: scale(0.2) translateY(50vh);
+  opacity: 0;
+  animation: 1s ease 500ms animacaoTitulo forwards;
+}
+@keyframes animacaoTitulo {
+  from {
+    transform: scale(0.2) translateY(50vh);
+    opacity: 0;
+  }
+  to {
+    transform:scale(1) translate(0);
+    opacity: 1;
+  }
+}
+
+.site-subtitle,
+.site-title {
+  color: whitesmoke;
+  text-align: center;
+}
+
+.site-title {
+  font-size: 4em;
+  font-family: 'Sedgwick Ave', cursive; 
+}
+   
+.site-subtitle {
+font-style: italic;
+font-family: 'East Sea Dokdo', cursive;
+line-height: 1.8em;
+font-size: 2.8em;
+    
+}
+
+.sobre,
+.contato,
+.portfolio {
+  padding: 2em;
+  min-height: 100vh;
+}
+
+@media(min-width: 1200px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+  }
+}
+
+.sobre h2,
+.contato h2,
+.portfolio h2 {
+  font-family: 'Sedgwick Ave', cursive;
+  color: whitesmoke;
+  margin-top: 0.7em;
+  margin-bottom: 1.5em;
+  font-size: 2.5em;
+}
+
+.sobre p {
+  color: whitesmoke;
+  text-indent: 1.4em;
+  margin-bottom: 1.4em;
+  text-align: justify;
+}
+
+.sobre a {
+  color:whitesmoke;
+  text-decoration: underline;
+}
+
+.sobre a:hover {
+  background-color: rgb(89, 64, 182);
+  text-decoration: none;
+  color: magenta;
+}
+
+.sobre .avatar {
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  margin-left: 1em;
+}
+
+@media( min-width: 600px) {
+  .sobre .avatar {
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%); 
+    float: right;
+  }
+}
+
+.portfolio .grid {
+  display: grid;
+  gap: 2em; 
+}
+@media( min-width: 560px) {
+  .portfolio .grid {
+    grid-template-columns: 240px 240px; 
+  }
+}
+
+@media( min-width: 880px) {
+  .portfolio .grid {
+    grid-template-columns: repeat(3, 260px); 
+    align-content: center;
     justify-content: center;
-    align-items: center;
-   }
+    height: calc(100vh - 8em - 48px );
+  }
+}
 
-   .menu {
-     background-color: white;
-     position: fixed;
-     width: 100vw;
-     top: 0;
-     z-index: 1;
-   }
+.flip-card {
+  height: 180px;
+  perspective: 1000px;
+}
+
+.flip-card:hover .card {
+  transform: rotateY(180deg);
+}
+
+.card {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 3s;
+}
+
+.card-front,
+.card-back { 
+  backface-visibility: hidden;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:rgb(193, 226, 236);
+  height: 180px;
+  width: 100%;
+  transform: rotateY(180deg);
+}
+
+
+
+.portfolio figure {
+  text-align: center;
+}
+
+.img-portfolio {
+  height: 180px;
+  width: 100%;
+  object-fit: fill;
+  border-radius: 5%; 
+  transition: transform 0.5 s; 
+
+}
+
+  /* .img-portfolio:hover {
+     transform: scale(1.2);
+   }*/
+
    
-   .menu ul {
-     display: flex;
-     justify-content: space-around;
-     background-color: turquoise;
-   }
-   
-   .menu li {
-     list-style: none; 
-     
-   }
 
-   .menu a {
-     display: block;
-     padding: 10px 20px;
-     transition: background-color 1.5s, color 1.5s;
-     /*background-color: aqua;(para saber como fica o botao atraves da cor*/
-   }
+.contato .icons {
+  text-align: center;
+}
 
-   .contato a:active,
-   .menu a:hover {
-     background-color: teal;
-     color: whitesmoke;
-   }
-   
-   a {
-     color: rgb(13, 14, 5);
-     text-decoration: none;
-   }
-   a:hover {
-     text-decoration: underline;
-   }
-   
-   .titulo {
-     transform: scale(0.2) translateY(50vh);
-     opacity: 0;
-     animation: linear 2s animacaoTitulo forwards;
-   }
-   @keyframes animacaoTitulo {
-      to {
-        transform: scale(1) translateY(0);
-        opacity: 1;
-      }
+.contato a {
+  color: antiquewhite;
+  font-size: 7em;
+  transition: text-shadow 0.5s;
+}
 
-   }
+.contato a:active,
+.contato a:hover {
+  text-decoration: none;
+  text-shadow:0px 0px 10px rgb(147, 219, 4);
+}
 
-   .site-subtitle,
-   .site-title {
-     color: whitesmoke;
-     text-align: center;
-   }
+.develop {
+  color: cornsilk;
+  margin: 1em;
+}
 
-   .site-title {
-     font-size: 3em;
-     font-family: 'Sedgwick Ave', cursive;
-     
-   }
-   
-   .site-subtitle {
-    font-style: italic;
-    font-family: 'East Sea Dokdo', cursive;
-    line-height: 1em;
-    font-size: 2.5em;
-    
-   }
-
-   .contato,
-   .portfolio {
-     padding: 2em;
-     min-height: 100vh;
-   }
-
-   .contato h2,
-   .portfolio h2 {
-    font-family: 'Sedgwick Ave', cursive;
-    color: whitesmoke;
-    margin-bottom: 1.5em;
-    font-size: 3em;
-   }
-
-   .portfolio .grid {
-     display: grid;
-     gap: 5em; 
-   }
-   @media( min-width: 560px) {
-      .portfolio .grid {
-        grid-template-columns: 240px 240px; 
-      }
-   }
-
-   @media( min-width: 880px) {
-    .portfolio .grid {
-      grid-template-columns: repeat(2, 300px); 
-      align-content: center;
-      justify-content: center;
-      height: calc(100vh - 48px );
-    }
- }
-
-
-   .portfolio figure {
-     text-align: center;
-     color: whitesmoke;
-   }
-
-   .img-portfolio {
-     height: 240px;
-     width: 360px;
-     object-fit: fill;
-     border-radius: 5%; 
-     transition: transform 0.5 s; 
-   }
-
-   .img-portfolio:hover {
-     transform: scale(1.2) rotate(10deg);
-   }
-
-   .contato .icons {
-     text-align: center;
-   }
-
-   .contato a{
-     color: antiquewhite;
-     font-size: 7em;
-     transition: text-shadow 0.5s;
-   }
-
-   .contato a:active,
-   .contato a:hover {
-     text-decoration: none;
-     text-shadow:0px 0px 10px rgb(147, 219, 4);
-   }
-
+.develop a {
+color: rgb(238, 216, 128);
+}
    
